changed format of fotos

--- a/index.html
+++ b/index.html
@@ -160,9 +160,9 @@
 
                     <div class="team__carousel">
                     <div class="carousel__button carouselElement__button--prev"></div>
-                    <div class="carousel__Element left"><img src="./images/worker1.png" alt=""><div class="workerLabel">Jimmy Doe</div><div class="functionLabel">Designer</div> </div>
-                    <div class="carousel__Element center"><img src="./images/worker2.png" alt=""><div class="workerLabel">Jane Doe</div><div class="functionLabel">Developer</div></div>
-                    <div class="carousel__Element right"><img src="./images/worker3.png" alt=""><div class="workerLabel">Tommy Doe</div><div class="functionLabel">Graphic</div></div>
+                    <div class="carousel__Element left"><img src="./images/worker1.webp" alt=""><div class="workerLabel">Jimmy Doe</div><div class="functionLabel">Designer</div> </div>
+                    <div class="carousel__Element center"><img src="./images/worker2.webp" alt=""><div class="workerLabel">Jane Doe</div><div class="functionLabel">Developer</div></div>
+                    <div class="carousel__Element right"><img src="./images/worker3.webp" alt=""><div class="workerLabel">Tommy Doe</div><div class="functionLabel">Graphic</div></div>
                     <div class="carousel__button carouselElement__button--next"></div>
                 </div>
             
